--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -11,6 +11,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "marked": "^15.0.7",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
