--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix",
-    "deploy": "gh-pages -d dist"
+    "deploy": "vue-cli-service build && gh-pages -d dist"
   },
   "dependencies": {
     "marked": "^15.0.7",
